updating committing this short Sunday session to the master Repository

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <head>
-
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <h1>This page is a record of what I've learned and examples of how I've used it</h1>
+  
   <article>
-      <h2>A note about Git</h2>
+    <h2>Process for this blog.</h2>  
+      <p>For everything I learn, create an entry here with the date, an explanation of what I learned, and also a demontration of the code <strong> including showing the code iteslf used for the demonstration of the tool or principle</strong>.</p>
+      <p>Specifically create an h2 followed by as many p's as needed, wrapped in a article tag and include both a demonstration of the code in use AND a view of the code as actually written.</p>
+      <p>Put new entries below this one but above the previous.</p>
+      <br/>
+      <textarea>Create an<article> with an<h2> and <code><p></code>'s explaining the tool or concept I've learned and
+      - Demonstrate it</textarea>
+  </article>
+  <!--Put new entries just below this one so I have the most current log entry at the top and the oldest at the bottom
+  Remember format is Article> H2, P's, textarea or similar if needed, Example.
+  -->
+  <article>
+    <h2>2020.08.09 - troubleshooting <Code> "< code>"</Code> </h2>
+    <p>I still need to find out how to display html code without it rendering but rather with it displaying as regular text. The above is a cute gerry-rig, but it's not the real solution.</p>  
+    <p>This does have me wondering whether going down these rabbit holes is worthwhile. I am going to say, "yes" because when I solve this, I will be better at troubleshooting, and I will understand something fundamental about HTML</p>
+  </article>
+
+  <article>
+      <h2>2020.08.08 - Cloning a Git Repository creates a folder of its name, in the pwd</h2>
       <p>When cloning a git repository from GitHub, it will come in it's own folder based on it's name. Meaning if I want this "learn-do" project to end up as a folder called "learn-d" in the "documents" folder, I need to execute the git clone command in terminal from the "documents" folder.</p>
       <p>There's no need to create a new folder for it called "learn-do" and to then clone it into that folder</p>
   </article>  
-</body>
+</body
