last minute notes re what worked and what didn't for <code>

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>2020.08.09 - troubleshooting <Code> "< code>"</Code> </h2>
     <p>I still need to find out how to display html code without it rendering but rather with it displaying as regular text. The above is a cute gerry-rig, but it's not the real solution.</p>  
     <p>This does have me wondering whether going down these rabbit holes is worthwhile. I am going to say, "yes" because when I solve this, I will be better at troubleshooting, and I will understand something fundamental about HTML</p>
+    <p>For now I will use this hack in the <code>< h2></code> of this article and avoid this issue becuase when I copy and paste the inspected html out of w3schools.com for where they have tags rendering as text, it translates them so the carrots are no longer carrots but are these instead - &lt; and &gt; </p>
+    <p>This works <Code> "< code>"</Code>.</p>
+    <P>But this does not<Code> "<code>"</Code.></P>
+    <p>This works      <code class="w3-codespan">&lt;span&gt;</code></p>
+    <p>And of course textarea works as in the header article.</p>
   </article>
 
   <article>
@@ -28,4 +33,5 @@
       <p>When cloning a git repository from GitHub, it will come in it's own folder based on it's name. Meaning if I want this "learn-do" project to end up as a folder called "learn-d" in the "documents" folder, I need to execute the git clone command in terminal from the "documents" folder.</p>
       <p>There's no need to create a new folder for it called "learn-do" and to then clone it into that folder</p>
   </article>  
-</body
+</body>
+
