learned a little CSS Grid moves

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h1>This page is a record of what I've learned and examples of how I've used it</h1>
   
   <article>
-    <h2>Process for this blog.</h2>  
+    <h2>Process for this Log.</h2>  
       <p>For everything I learn, create an entry here with the date, an explanation of what I learned, and also a demontration of the code <strong> including showing the code iteslf used for the demonstration of the tool or principle</strong>.</p>
       <p>Specifically create an h2 followed by as many p's as needed, wrapped in a article tag and include both a demonstration of the code in use AND a view of the code as actually written.</p>
       <p>Put new entries below this one but above the previous.</p>
@@ -22,6 +22,32 @@
     <p></p>
   </article>
 -->
+<article>
+  <h2>2020.08.11 - CSS Grid columns, Rows, </h2>
+  <p>Used grid-template-columns, "" rows</p>
+  <p>The divs group just below this should have 3 columns.</p>
+  <p>Originally I had transposed one of the px's in the CSS declaration for <code>grid-template-columns: 100<strong>xp</strong> 100px 100px;</code></p>
+  <div class="css-grid">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+  </div>
+  <p>Absolute AND relative units can be used in this context to set the size of columns or rows in <code>css grid</code>. What options are used in the demonstration below this?</p>
+  <div class="css-grid-units">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+  </div>
+  <P><code>Auto 50px 10% 2fr 1fr</code>. In other words that's automatically the size of the content, 50px, 10% of the space, 2 "parts" where parts are the total number of parts in the container, 1 part.</P>
+  <br/>
+  <p>I think going forward I will cease the brand-new example for each specific line of code I learn, and instead collect questions to trigger each line of code, and at the end of a session, summarize the concept and it's capabilities.</p>
+</article>
+
 <article>
   <h2>2020.08.10 - Turns out using &lt; and &gt; IS done by writing "& lt ;" without spaces.</h2>
   
