--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   </article>
 -->
 <article>
+  <h2>2020.08.12 - CSS Grid Columns </h2>
+  <p>Add a gap between the columns by using <code>grid-column-gap: 20px;</code> declaration in CSS.</p>
+    
+</article>
+<article>
   <h2>2020.08.11 - CSS Grid columns, Rows, </h2>
   <p>Used grid-template-columns, "" rows</p>
   <p>The divs group just below this should have 3 columns.</p>
