Added  Grid-row-gap and grid-gaps CSS declarations.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
   </article>
 -->
 <article>
+  <h2>2020.08.13 - Gap in between Rows via CSS Grid</h2>
+  <p>Use the CSS Argument: <code>grid-row-gap: 5px;</code>.</p>
+  <P>The number can be relative or absolute. It will create a gap in between the horizontal rows in the CSS Grid.</P>
+  <p>You can also use <code>grid-gap: 5px 10px;</code> to set both the row <strong>and</strong> the column gap at once. Row gap is set w first number, column gap with the second. One number only would set BOTH row and column gap.</p>
+</article>
+<article>
   <h2>2020.08.12 - CSS Grid Columns </h2>
   <p>Add a gap between the columns by using <code>grid-column-gap: 20px;</code> declaration in CSS.</p>
-    
 </article>
 <article>
   <h2>2020.08.11 - CSS Grid columns, Rows, </h2>
