--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </article>
 -->
 <article>
-  <h2>2020.08.14 - CSS Grid</h2>
+  <h2>2020.08.14-15 - CSS Grid</h2>
   <p>Control how many columns a grid item in a CSS Grid will consume using: <code>grid-column</code>, which is a CSS property that applies to the grid items and <strong>not</strong> the grid itself. </p>
   <p><code>grid-column: 1 / 3;</code> makes an item stretch from the first to the third invisible line, separating all of the columns. These lines count from 1 at the top and left, upward in integers.</p>
   <p>Same goes for rows via <code>grid-row: 1/3;</code></p>
@@ -36,7 +36,7 @@
     <div class="css-grid-j-start"><code>grid-template-areas:</code></div>
     <div class="css-grid-j-end"><code>"header header header"</code></div>    
     <div class="css-grid-j-end"><code>". content content"</code></div>
-    <div class="css-grid-j-start"><code>"footer footer footer"</code></div>
+    <div class="css-grid-j-end"><code>"footer footer footer"</code></div>
   </div>
   <p> the above was intended to be slightly offset like the CSS code in the freecodecame.org sandbox pane. Alas I didn't pull it off. Ideally I will start here with figuring this out so that I really can use this functionality.</p>
 </article>
