Added entry for Dev Tools. Justified body text, centered h2 at element level, added padding within article elements.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
   </article>
 -->
 <article>
+  <h2>2020.08.17 - Dev Tools</h2>
+  <p>Using the dev tools links on the <a href="https://www.theodinproject.com/courses/web-development-101/lessons/developer-tools?ref=lnav">Odin Project Lesson Page</a></p>
+  <p>Learned that how to inspect elements on a page, as well as how to highlight rendered elements by selecting the html/css/etc. iteself.</p>
+  <p>Learned I can edit in the inspector any elements I want and have the browser render my edited version (not uploading to the server of course).</p>
+  <p>The inspector allows me to view the html and the css and to see which css properties are superior to which, ranking them from most specific to most general, relative to the element in question. This enables troubleshooting if there is a property acting superior to an other that I forgot about.</p>
+  <p>There's even the ability to select from a color chart replacement colors where color is specified.</p>
+  <p>Can manually adjust margin, border, padding from the diagram of those.</p>
+  <p>Javascript can be inpsected with using the Event Listeners, DOM Breakpoints and Properties tabs.</p>
+  <p>Console at the bottom can be fed javascript and it will run within the page itself and therefore I have access to any js functions available on the page.</p>
+  <p>Use Computed to </p>
+  <h3>Workflow for Using Inspector to Debug Webcode</h3>
+  <ol>
+    <li>Edit in the inspector.</li>
+    <ol>
+      <li>This includes toggling on and off CSS and making changes in the "Styles" section.</li>
+    </ol>
+    <li>Copy and paste into my actual code.</li>
+    <li>Sort from specific to general looking through the elements and CSS properties to see what is causing the styles I don't want.</li>
+    <li>Rinse, Repeat.</li>
+  </ol>
+</article>
+<article>
   <h2>2020.08.16 - New Blog Protocol and more CSS Grid</h2>
   <p>New protocol (will be updated at top as well)</p>
   <p>Original protocol (V.1):</p>
