Just a note about today's assignment: recreating the Google Homepage.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   </article>
 -->
 <article>
+  <h2>2020.08.18 - Google Homepage Recreate</h2>
+  <p>Assignment is to recreate the Google homepage. Not the whole functionality of course, just the page.</p>
+</article>
+<article>
   <h2>2020.08.17 - Dev Tools</h2>
   <p>Using the dev tools links on the <a href="https://www.theodinproject.com/courses/web-development-101/lessons/developer-tools?ref=lnav">Odin Project Lesson Page</a></p>
   <p>Learned that how to inspect elements on a page, as well as how to highlight rendered elements by selecting the html/css/etc. iteself.</p>
