started on google SERP advanced project - now it gets interesting.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <article>
   <h2>2020.08.18 - Google Homepage Recreate</h2>
   <p>Assignment is to recreate the Google homepage. Not the whole functionality of course, just the page.</p>
+  <p>I will be recreating the hard version, this one: <a href="https://www.google.com/search?q=build+this+webpage">https://www.google.com/search?q=build+this+webpage</a></p>
+  <p>Next actions will be to diagram the page on large paper marking it with expected code/elements, and then get the rest of the content up on the page, styling it afterwords.</p>
 </article>
 <article>
   <h2>2020.08.17 - Dev Tools</h2>
