Just a tiny update. Marked up part of the google SERP

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
   </article>
 -->
 <article>
+  <h2>2020.08.19 - Google SERP beginning</h2>
+  <p>Marking up the SERP.</p>
+  <P>Depth and quality start now.</P>
+  <p>Got the top half of the Mark-up done.</p>
+</article>
+<article>
   <h2>2020.08.18 - Google Homepage Recreate</h2>
   <p>Assignment is to recreate the Google homepage. Not the whole functionality of course, just the page.</p>
   <p>I will be recreating the hard version, this one: <a href="https://www.google.com/search?q=build+this+webpage">https://www.google.com/search?q=build+this+webpage</a></p>
