New blog entry for today. CSS Grid, next=media queries, CSS grid areas sized etc.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
   </article>
 -->
 <article>
+  <h2>2020.08.21 - Fixed the CSS Grid placements</h2>
+  <p>Fixed CSS placements by completing the css grid assignments... DUH.</p>
+  <p>Next up need to set media quieries for bigger than 800px(?) and need to set location and grid area sizing for all current grid-areas.</p>
+  <p>Then size the logo and pick what to do next.</p>
+</article>
+<article>
   <h2>2020.08.19 - Google SERP beginning</h2>
   <p>Marking up the SERP.</p>
   <P>Depth and quality start now.</P>
