Re-did markup with higher level css grid. Now let's see how it implements.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
   </article>
 -->
 <article>
+  <h2>2020.08.21 - Re-Doing the markup with tiered levels of CSS Grid breaking into sub grids rather than multiple top-level grids.</h2>
+  <p>Re-created the css grid so it starts at the highest level, for the whole page. Then will proceed to create sub-grids that will break up those grid cells into smaller ones ... IE designing the house, then where the rooms are, then the boxes in the rooms, then the content in the boxes.</p>
+  <p>This should make the code more modular and therefore easier to copy+paste for repeating sections.</p>
+  <p>One question I have at this point, and I'll see how I deal with it as this progresses - is how best to think about labeling the classes for these various grid-area-sections? "Top left" "Top middle" "top-Right"? For the three sections along the top? Or should I name them for what they contain?: "Google Logo", "Search bar", "Launcher and profile pic"? <strong>I will opt for naming based on location at the top level - we'll see how I feel at lower levels.</strong></p>
+</article>
+<article>
   <h2>2020.08.21 - Fixed the CSS Grid placements</h2>
   <p>Fixed CSS placements by completing the css grid assignments... DUH.</p>
-  <p>Next up need to set media quieries for bigger than 800px(?) and need to set location and grid area sizing for all current grid-areas.</p>
+  <p>Next up need to set media quieries for larger and smaller thant 800px(?) and need to set location and grid area sizing for all current grid-areas.</p>
   <p>Then size the logo and pick what to do next.</p>
 </article>
 <article>
