final notes for today's update.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <p>Re-created the css grid so it starts at the highest level, for the whole page. Then will proceed to create sub-grids that will break up those grid cells into smaller ones ... IE designing the house, then where the rooms are, then the boxes in the rooms, then the content in the boxes.</p>
   <p>This should make the code more modular and therefore easier to copy+paste for repeating sections.</p>
   <p>One question I have at this point, and I'll see how I deal with it as this progresses - is how best to think about labeling the classes for these various grid-area-sections? "Top left" "Top middle" "top-Right"? For the three sections along the top? Or should I name them for what they contain?: "Google Logo", "Search bar", "Launcher and profile pic"? <strong>I will opt for naming based on location at the top level - we'll see how I feel at lower levels.</strong></p>
+  <p>Next is to DEBUG the shit out of what I've done - there's some structure there but it's very definitely not working...fix it and then reflect on big picture why it wasn't happening in the first place - imagine checklists/mnemonics, things to look out for...</p>
 </article>
 <article>
   <h2>2020.08.21 - Fixed the CSS Grid placements</h2>
