--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   </article>
 -->
 <article>
+  <h2>2020.08.22 - Learning Importance of structure and order of operations in CSS Grid</h2>
+  <p>Coded out the whole CSS Grid for the page and it had so many bugs with missing &lt;/div&gt;'s I couldn't sort them. Some were in-line and so I duplicated below enclosed elements creating multiple closing div's. Other times I did the opposite.</p>
+  <p>keeping my divs organized - is critical.</p>
+  <p>Also critical is to create the top level structure first and make sure it is what I'm aiming for. Then Gradually fill in the sections with the desired contents as I go so I know where the errors are coming from and don't have to debug a pile of stuff but can build right the first time...as I go.</p>
+  <p>Got all of the top level css grid areas corrected. And the second level as well.</p>
+  <p><strong>NEXT let's get the top level grid spacing to be the same as the example SERP so the sections fall in the correct places.</strong></p>
+</article>
+<article>
   <h2>2020.08.21 - Re-Doing the markup with tiered levels of CSS Grid breaking into sub grids rather than multiple top-level grids.</h2>
   <p>Re-created the css grid so it starts at the highest level, for the whole page. Then will proceed to create sub-grids that will break up those grid cells into smaller ones ... IE designing the house, then where the rooms are, then the boxes in the rooms, then the content in the boxes.</p>
   <p>This should make the code more modular and therefore easier to copy+paste for repeating sections.</p>
