adjusted some items out of CSS Grid - I think that'll be what goes on for the remainder of the items written in there.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   </article>
 -->
 <article>
+  <h2>2020.08.24 - Regressing from CSS Grid to flex box and more base options.</h2>
+  <p>Found that Google's homepage doesn't use something like CSS Grid, but rather uses flex box for the search items.</p>
+  <p>Further finding that CSS Grid SEEMS to be relatively inflexible regarding the placement of items. Also remembering the setting position to absolute takes an element out of the normal flow of rendering, which means it won't influence where the subsequent items will fall.</p>
+</article>
+<article>
   <h2>2020.08.23 - Short session - Looking for grid column width settings</h2>
   <p>Started focusing on the width of the columns and realized that the "columns" are actually NOT the same width in what I've dubbed the 9 sections. Turns out the logo is in a section more narrow than the margin on the left main section was going to be...</p>
   <p>Need to re-think this tomorrow when I have more time - can probably go much simpler...read prev- day's notes as well to not miss anything.</p>
