tweaked search box a bit.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
         <li>Work through lessons pausing at ends of themes, like CSS Grid, to summarize the topic, rather than belaboring every little nugget of learning.</li>
         <li>Create an h2 headline following the previous formats, followed by as many p's as needed, wrapped in a article tag describe what the code is used for and how it works, an optionally include a single example that contains all of the arguments/attributes/properties etc. learned in this session.</li>
         <li>Put new entries below this one but above the previous.</li>
+        <li>Cut off list items and append them to journal entries as they are finished in a given day.</li>
       </ol>
       <br/>
+      <ul>
+        <li>Position launcher and profile icon at the appropriate location.</li>
+        <li>Get launcher and profile to adjust with window size.</li>
+        <li>Add in next row of search buttons.</li>
+        <li>Place and style search results etimate.</li>
+        <li>Place and style first SER.</li>
+      </ul>
   </article>
   <!--Put new entries just below this one so I have the most current log entry at the top and the oldest at the bottom
   Remember format is Article> H2, P's, textarea or similar if needed, Example.
@@ -23,13 +31,19 @@
   </article>
 -->
 <article>
+  <h2>2020.08.25 - Switching from CSS Grid to simpler + Flex Box</h2>
+  <p>Switched from CSS Grid to flex box for most of the top header section. Still working on the launcher iton and the profile pic icon ability to expand.</p>
+  <p>It only just now occurs to me that I ought to list the features I want to include and systematically address them rather than simply addressing them haphazardly as I notice them. How funny that I love to write lists and now I'm finally thinking of that in earnest...maybe bc I have been focused on this journal approach.</p>
+  <p>Right then...List goes above this so I can always see it, and I'll cut off list items and append them to journal entries as they are finished in a given day.</p>
+</article>
+<article>
   <h2>2020.08.24 - Regressing from CSS Grid to flex box and more base options.</h2>
   <p>Found that Google's homepage doesn't use something like CSS Grid, but rather uses flex box for the search items.</p>
-  <p>Further finding that CSS Grid SEEMS to be relatively inflexible regarding the placement of items. Also remembering the setting position to absolute takes an element out of the normal flow of rendering, which means it won't influence where the subsequent items will fall.</p>
+  <p>Further finding that CSS Grid SEEMS to be relatively inflexible regarding the placement of items. Also remembering that setting position to absolute takes an element out of the normal flow of rendering, which means it won't influence where the subsequent items will fall.</p>
 </article>
 <article>
   <h2>2020.08.23 - Short session - Looking for grid column width settings</h2>
-  <p>Started focusing on the width of the columns and realized that the "columns" are actually NOT the same width in what I've dubbed the 9 sections. Turns out the logo is in a section more narrow than the margin on the left main section was going to be...</p>
+  <p>Started focusing on the width of the columns and realized that the "columns" are actually NOT the same width in what I've dubbed the 3 left sections. Turns out the logo is in a section more narrow than the margin on the left main section was going to be...</p>
   <p>Need to re-think this tomorrow when I have more time - can probably go much simpler...read prev- day's notes as well to not miss anything.</p>
 </article>
 <article>
